--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -79,7 +79,7 @@
             <div class="row">
               <div class="col-xs-3">
                   <label>Value type</label>
-                  <select style="width: 100%" name="value_type">
+                  <select style="width: 100%" name="event_value_type">
                     <option>text</option>
                     <option>timestamp</option>
                     <option>boolean</option>
@@ -91,8 +91,8 @@
               <div class="col-xs-3">
                 <label>Value name</label>
                 <div class="input-group" style="width: 100%">
-                  <input class="form-control" style="width: 80%" name="value_name_like"/>
-                  <select class="form-control" style="padding-left: 0; width: 20%" name="value_name_like_op">
+                  <input class="form-control" style="width: 80%" name="event_value_name_like"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_name_like_op">
                     <option>like</option>
                     <option>notlike</option>
                   </select>
@@ -101,8 +101,8 @@
               <div class="col-xs-3">
                 <label>Value</label>
                 <div class="input-group" style="width: 100%">
-                  <input type="text" class="form-control" style="width: 80%" name="value"/>
-                  <select class="form-control" style="padding-left: 0; width: 20%" name="value_operator">
+                  <input type="text" class="form-control" style="width: 80%" name="event_value"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_operator">
                     {% include "eboa_nav/operators.html" %}
                   </select>
                 </div>
