--- a/src/vboa/templates/eboa_nav/event_duration.html
+++ b/src/vboa/templates/eboa_nav/event_duration.html
@@ -1,9 +1,9 @@
 <div class="col-xs-3">
   <label>Event duration (seconds)</label>
   <div>
-    <input style="float: left; width: 90%" type="text" class="form-control"  name="event_duration"/>
+    <input style="float: left; width: 90%" type="text" class="form-control"  name="event_duration" id="event_duration_input"/>
     <div style="float: right; width: 10%">
-      <select class="form-control" style="padding-left: 0" name="event_duration_operator">
+      <select class="form-control" style="padding-left: 0" name="event_duration_operator" id="event_duration_operator">
         {% include "eboa_nav/operators.html" %}
       </select>
     </div>
