--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -7,42 +7,42 @@
             <!-- Sources -->
             <div class="row query-sources">
               <div class="col-xs-3 query-source-names">
-                <label>Source like (<input type="checkbox" name="source_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="source_like_events" name="source_like"/>
+                <label id="events_sources_like_checkbox">Source like (<input type="checkbox" name="source_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="source_like_events" name="source_like" id="events_sources_like_text"/>
                 <datalist id="source_like_events">
                 </datalist>
               </div>
               <div class="col-xs-3 query-source-names">
-                <label>Sources (<input type="checkbox" name="source_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="sources" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="events_sources_in_checkbox">Sources (<input type="checkbox" name="source_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="sources" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1"  id="events_sources_in_text">
                 </select>
               </div>
             </div>
             <!-- Exlicit references -->
             <div class="row">
               <div class="col-xs-3 query-ers">
-                <label>Explicit reference like (<input type="checkbox" name="er_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="er_like_events" name="er_like"/>
+                <label id="events_explicit_refs_like_checkbox">Explicit reference like (<input type="checkbox" name="er_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="er_like_events" name="er_like" id="events_explicit_refs_like_text"/>
                 <datalist id="er_like_events">
                 </datalist>
               </div>
               <div class="col-xs-3 query-ers">
-                <label>Explicit references (<input type="checkbox" name="er_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="ers" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="events_explicit_refs_in_checkbox">Explicit references (<input type="checkbox" name="er_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="ers" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="events_explicit_refs_in_text">
                 </select>
               </div>
             </div>
             <!-- Event keys -->
             <div class="row">
               <div class="col-xs-3 query-keys">
-                <label>Key like (<input type="checkbox" name="key_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="key_like_events" name="key_like"/>
+                <label id="events_event_keys_like_checkbox">Key like (<input type="checkbox" name="key_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="key_like_events" name="key_like" id="events_event_keys_like_text"/>
                 <datalist id="key_like_events">
                 </datalist>
               </div>
               <div class="col-xs-3 query-keys">
-                <label>Keys (<input type="checkbox" name="key_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="keys" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="events_event_keys_in_checkbox">Keys (<input type="checkbox" name="key_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="keys" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="events_event_keys_in_text">
                 </select>
               </div>
             </div>
@@ -50,36 +50,36 @@
             <div>
               <div class="row  query-gauges">
                 <div class="col-xs-3 query-gauge-names">
-                  <label>Gauge name like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge_name_like_events" name="gauge_name_like"/>
+                  <label id="events_gauge_names_like_checkbox">Gauge name like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                  <input class="form-control" list="gauge_name_like_events" name="gauge_name_like" id="events_gauge_names_like_text"/>
                   <datalist id="gauge_name_like_events">
                   </datalist>
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
-                  <label>Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge_system_like_events" name="gauge_system_like"/>
+                  <label id="events_gauge_system_like_checkbox">Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                  <input class="form-control" list="gauge_system_like_events" name="gauge_system_like" id="events_gauge_system_like_text"/>
                   <datalist id="gauge_system_like_events">
                   </datalist>
                 </div>
               </div>
               <div class="row query-gauges">
                 <div class="col-xs-3 query-gauge-names">
-                  <label>Gauge names (<input type="checkbox" name="gauge_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                  <select name="gauge_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                  <label id="events_gauge_names_in_checkbox">Gauge names (<input type="checkbox" name="gauge_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                  <select name="gauge_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="events_gauge_names_in_text">
                   </select>
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
-                  <label>Gauge systems (<input type="checkbox" name="gauge_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                  <select name="gauge_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                  <label id="events_gauge_system_in_checkbox">Gauge systems (<input type="checkbox" name="gauge_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                  <select name="gauge_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="events_gauge_system_in_text">
                   </select>
                 </div>
               </div>
             </div>
             <!-- Values -->
-            <div class="row">
+            <div class="row" id="events_value_query_initial">
               <div class="col-xs-3">
                   <label>Value type</label>
-                  <select style="width: 100%" name="event_value_type">
+                  <select style="width: 100%" name="event_value_type" id="events_value_type">
                     <option>text</option>
                     <option>timestamp</option>
                     <option>boolean</option>
@@ -91,8 +91,8 @@
               <div class="col-xs-3">
                 <label>Value name</label>
                 <div class="input-group" style="width: 100%">
-                  <input class="form-control" style="width: 80%" name="event_value_name_like"/>
-                  <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_name_like_op">
+                  <input class="form-control" style="width: 80%" name="event_value_name_like" id="events_value_name_text"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_name_like_op" id="events_value_name_option">
                     <option>like</option>
                     <option>notlike</option>
                   </select>
@@ -101,36 +101,36 @@
               <div class="col-xs-3">
                 <label>Value</label>
                 <div class="input-group" style="width: 100%">
-                  <input type="text" class="form-control" style="width: 80%" name="event_value"/>
-                  <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_operator">
+                  <input type="text" class="form-control" style="width: 80%" name="event_value" id="events_value_value_text"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="event_value_operator" id="events_value_value_operator">
                     {% include "eboa_nav/operators.html" %}
                   </select>
                 </div>
               </div>
               <div>
                 <span onclick="vboa.add_value_query_events('more-value-query-events')">
-                  <span class="glyphicon glyphicon-plus"></span>
+                  <span class="glyphicon glyphicon-plus" id="events_add_value"></span>
                 </span>
               </div>
             </div>
             <div id="more-value-query-events">
             </div>
             <!-- Start and stop -->
-            <div class="row">
+            <div class="row" id="events_start_stop_initial">
               {% include "eboa_nav/start_stop.html" %}
               <div>
                 <span onclick="vboa.add_start_stop('more-start-stop-query-events')">
-                  <span class="glyphicon glyphicon-plus"></span>
+                  <span class="glyphicon glyphicon-plus" id="events_add_start_stop"></span>
                 </span>
               </div>
             </div>
             <div id="more-start-stop-query-events">
             </div>
             <!-- Event duration -->
-            <div class="row">
+            <div class="row" id="events_duration_initial">
               {% include "eboa_nav/event_duration.html" %}
               <div>
-                <span onclick="vboa.add_event_duration('more-event-duration-query-events')">
+                <span onclick="vboa.add_event_duration('more-event-duration-query-events')" id="events_add_duration>
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
@@ -138,10 +138,10 @@
             <div id="more-event-duration-query-events">
             </div>
             <!-- Ingestion time -->
-            <div class="row">
+            <div class="row" id="events_ingestion_time_initial">
               {% include "eboa_nav/ingestion_time.html" %}
               <div>
-                <span onclick="vboa.add_ingestion_time('more-ingestion-time-query-events')">
+                <span onclick="vboa.add_ingestion_time('more-ingestion-time-query-events')" id="events_add_ingestion_time">
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
@@ -149,12 +149,12 @@
             <div id="more-ingestion-time-query-events">
             </div>
             <div>
-              <label>
+              <label id="events_show_timeline">
                 <input type="checkbox" name="show_timeline" checked><span class="label-text"><b>Show timeline</b></span>
               </label>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="events_submit_button">Query</button>
             </div>
           </form>
         </div>
@@ -167,4 +167,3 @@
   <!-- /.panel -->
 </div>
 <!-- /.panel -->
-
