--- a/src/vboa/templates/eboa_nav/start_stop.html
+++ b/src/vboa/templates/eboa_nav/start_stop.html
@@ -1,12 +1,12 @@
 <div class="col-xs-3">
   <label>Start</label>
   <div class="input-group date">
-    <input type="text" class="form-control" name="start"/>
+    <input type="text" class="form-control" name="start" id="start_input"/>
     <span class="input-group-addon">
       <span class="glyphicon glyphicon-calendar"></span>
     </span>
     <div>
-      <select class="form-control" style="padding-left: 0" name="start_operator">
+      <select class="form-control" style="padding-left: 0" name="start_operator" id="start_operator">
         {% include "eboa_nav/operators.html" %}
       </select>
     </div>
@@ -15,12 +15,12 @@
 <div class="col-xs-3">
   <label>Stop</label>
   <div class="input-group date">
-    <input type="text" class="form-control"  name="stop"/>
+    <input type="text" class="form-control"  name="stop" id="stop_input"/>
     <span class="input-group-addon">
       <span class="glyphicon glyphicon-calendar"></span>
     </span>
     <div>
-      <select class="form-control" style="padding-left: 0" name="stop_operator">
+      <select class="form-control" style="padding-left: 0" name="stop_operator" id="stop_operator">
         {% include "eboa_nav/operators.html" %}
       </select>
     </div>
