Correct links to sources, annotation configurations and gauges from the table of DIM signatures

--- a/src/vboa/templates/eboa_nav/dim_signatures_nav.html
+++ b/src/vboa/templates/eboa_nav/dim_signatures_nav.html
@@ -26,9 +26,9 @@
         {% for dim_signature in dim_signatures %}
         <tr>
           <td>{{ dim_signature.dim_signature }}</td>
-          <td><a href="/eboa_nav/query-sources-by-dim/{{ dim_signature.dim_signature_id }}"><i class="fa fa-link"></i></a></td>
-          <td><a href="/eboa_nav/query-gauges-by-dim/{{ dim_signature.dim_signature_id }}"><i class="fa fa-link"></i></a></td>
-          <td><a href="/eboa_nav/query-annotation-cnfs-by-dim/{{ dim_signature.dim_signature_id }}"><i class="fa fa-link"></i></a></td>
+          <td><a href="/eboa_nav/query-sources-by-dim/{{ dim_signature.dim_signature_uuid }}"><i class="fa fa-link"></i></a></td>
+          <td><a href="/eboa_nav/query-gauges-by-dim/{{ dim_signature.dim_signature_uuid }}"><i class="fa fa-link"></i></a></td>
+          <td><a href="/eboa_nav/query-annotation-cnfs-by-dim/{{ dim_signature.dim_signature_uuid }}"><i class="fa fa-link"></i></a></td>
           <td>{{ dim_signature.dim_signature_uuid }}</td>
         </tr>
         {% endfor %}
