--- a/src/vboa/templates/eboa_nav/explicit_references_nav.html
+++ b/src/vboa/templates/eboa_nav/explicit_references_nav.html
@@ -16,6 +16,8 @@
         <tr>
           <th>Explicit reference</th>
           <th>Group</th>
+          <th>Events</th>
+          <th>Annotations</th>
           <th>Ingestion time</th>
           <th>Linked explicit references</th>
           <th>Explicit reference UUID</th>
@@ -26,6 +28,8 @@
         <tr>
           <td>{{ er.explicit_ref }}</td>
           <td>{{ er.group.name }}</td>
+          <td><a href="/eboa_nav/query-events-by-er/{{ er.explicit_ref }}"><i class="fa fa-link"></i></a></td>
+          <td><a href="/eboa_nav/query-annotations-by-er/{{ er.explicit_ref }}"><i class="fa fa-link"></i></a></td>
           <td>{{ er.ingestion_time }}</td>
           <td><a href="/eboa_nav/query-er-links/{{ er.explicit_ref_uuid }}"><i class="fa fa-link"></i></a></td>
           <td>{{ er.explicit_ref_uuid }}</td>
@@ -36,6 +40,8 @@
         <tr>
           <th>Explicit reference</th>
           <th>Group</th>
+          <th>Events</th>
+          <th>Annotations</th>
           <th>Ingestion time</th>
           <th>Linked explicit references</th>
           <th>Explicit reference UUID</th>
