--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -108,8 +108,8 @@
                 </div>
               </div>
               <div>
-                <span onclick="vboa.add_value_query_events('more-value-query-events')">
-                  <span class="glyphicon glyphicon-plus" id="events_add_value"></span>
+                <span onclick="vboa.add_value_query_events('more-value-query-events')" id="events_add_value">
+                  <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
             </div>
@@ -119,8 +119,8 @@
             <div class="row" id="events_start_stop_initial">
               {% include "eboa_nav/start_stop.html" %}
               <div>
-                <span onclick="vboa.add_start_stop('more-start-stop-query-events')">
-                  <span class="glyphicon glyphicon-plus" id="events_add_start_stop"></span>
+                <span onclick="vboa.add_start_stop('more-start-stop-query-events')" id="events_add_start_stop">
+                  <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
             </div>
