--- a/src/vboa/templates/eboa_nav/query_annotations_content.html
+++ b/src/vboa/templates/eboa_nav/query_annotations_content.html
@@ -7,63 +7,63 @@
             <!-- Sources -->
             <div class="row query-sources">
               <div class="col-xs-3 query-source-names">
-                <label>Source like (<input type="checkbox" name="source_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="source_like_annotations" name="source_like"/>
+                <label id="annotations_sources_like_checkbox">Source like (<input type="checkbox" name="source_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="source_like_annotations" name="source_like" id="annotations_sources_like_text"/>
                 <datalist id="source_like_annotations">
                 </datalist>
               </div>
               <div class="col-xs-3 query-source-names">
-                <label>Sources (<input type="checkbox" name="source_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="sources" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="annotations_sources_in_checkbox">Sources (<input type="checkbox" name="source_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="sources" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="annotations_sources_in_text">
                 </select>
               </div>
             </div>
             <!-- Exlicit references -->
             <div class="row">
               <div class="col-xs-3 query-ers">
-                <label>Explicit reference like (<input type="checkbox" name="er_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="er_like_annotations" name="er_like"/>
+                <label id="annotations_explicit_refs_like_checkbox">Explicit reference like (<input type="checkbox" name="er_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="er_like_annotations" name="er_like" id="annotations_explicit_refs_like_text"/>
                 <datalist id="er_like_annotations">
                 </datalist>
               </div>
               <div class="col-xs-3 query-ers">
-                <label>Explicit references (<input type="checkbox" name="er_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="ers" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id=annotations_explicit_refs_in_checkbox>Explicit references (<input type="checkbox" name="er_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="ers" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="annotations_explicit_refs_in_text">
                 </select>
               </div>
             </div>
             <!-- Annotation configurations -->
             <div class="row  query-annotation-cnfs">
               <div class="col-xs-3 query-annotation-names">
-                <label>Annotation name like (<input type="checkbox" name="annotation_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="annotation_name_like_annotations" name="annotation_name_like"/>
+                <label id="annotations_annotation_names_like_checkbox">Annotation name like (<input type="checkbox" name="annotation_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="annotation_name_like_annotations" name="annotation_name_like" id="annotations_annotation_names_like_text"/>
                 <datalist id="annotation_name_like_annotations">
                 </datalist>
               </div>
               <div class="col-xs-3 query-annotation-systems">
-                <label>Annotation system like (<input type="checkbox" name="annotation_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="annotation_system_like_annotations" name="annotation_system_like"/>
+                <label id="annotations_annotation_system_like_checkbox">Annotation system like (<input type="checkbox" name="annotation_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="annotation_system_like_annotations" name="annotation_system_like" id="annotations_annotation_system_like_text"/>
                 <datalist id="annotation_system_like_annotations">
                 </datalist>
               </div>
             </div>
             <div class="row query-annotation-cnfs">
               <div class="col-xs-3 query-annotation-names">
-                <label>Annotation names (<input type="checkbox" name="annotation_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="annotation_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="annotations_annotation_names_in_checkbox">Annotation names (<input type="checkbox" name="annotation_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="annotation_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="annotations_annotation_names_in_text">
                 </select>
               </div>
               <div class="col-xs-3 query-annotation-systems">
-                <label>Annotation systems (<input type="checkbox" name="annotation_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="annotation_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="annotations_annotation_system_in_checkbox">Annotation systems (<input type="checkbox" name="annotation_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="annotation_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="annotations_annotation_system_in_text">
                 </select>
               </div>
             </div>
             <!-- Values -->
-            <div class="row">
+            <div class="row" id="annotations_value_query_initial">
               <div class="col-xs-3">
                 <label>Value type</label>
-                <select style="width: 100%" name="annotation_value_type">
+                <select style="width: 100%" name="annotation_value_type" id="annotations_value_type">
                   <option>text</option>
                   <option>timestamp</option>
                   <option>boolean</option>
@@ -75,8 +75,8 @@
               <div class="col-xs-3">
                 <label>Value name</label>
                 <div class="input-group" style="width: 100%">
-                  <input class="form-control" style="width: 80%" name="annotation_value_name_like"/>
-                  <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_name_like_op">
+                  <input class="form-control" style="width: 80%" name="annotation_value_name_like" id="annotations_value_name_text"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_name_like_op" id="annotations_value_name_option">
                     <option>like</option>
                     <option>notlike</option>
                   </select>
@@ -85,14 +85,14 @@
               <div class="col-xs-3">
                 <label>Value</label>
                 <div class="input-group" style="width: 100%">
-                  <input type="text" class="form-control" style="width: 80%" name="annotation_value"/>
-                  <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_operator">
+                  <input type="text" class="form-control" style="width: 80%" name="annotation_value" id="annotations_value_value_text"/>
+                  <select class="form-control" style="padding-left: 0; width: 20%" name="annotation_value_operator" id="annotations_value_value_operator">
                     {% include "eboa_nav/operators.html" %}
                   </select>
                 </div>
               </div>
               <div>
-                <span onclick="vboa.add_value_query_annotations('more-value-query-annotations')">
+                <span onclick="vboa.add_value_query_annotations('more-value-query-annotations')" id="annotations_add_value">
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
@@ -100,10 +100,10 @@
             <div id="more-value-query-annotations">
             </div>
             <!-- Ingestion time -->
-            <div class="row">
+            <div class="row" id="annotations_ingestion_time_initial">
               {% include "eboa_nav/ingestion_time.html" %}
               <div>
-                <span onclick="vboa.add_ingestion_time('more-ingestion-time-query-annotations')">
+                <span onclick="vboa.add_ingestion_time('more-ingestion-time-query-annotations')" id="annotations_add_ingestion_time">
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
@@ -111,12 +111,12 @@
             <div id="more-ingestion-time-query-annotations">
             </div>
             <div>
-              <label>
-                <input type="checkbox" name="show_map"><span class="label-text"><b>Show map</b></span>
+              <label id="annotations_map_button">
+                <input type="checkbox" name="show_map"><span class="label-text" ><b>Show map</b></span>
               </label>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="annotations_submit_button">Query</button>
             </div>
           </form>
         </div>
@@ -129,4 +129,3 @@
   <!-- /.panel -->
 </div>
 <!-- /.panel -->
-
