--- a/src/vboa/templates/eboa_nav/query_gauges_content.html
+++ b/src/vboa/templates/eboa_nav/query_gauges_content.html
@@ -7,51 +7,51 @@
             <div>
               <div class="row  query-gauges">
                 <div class="col-xs-3 query-gauge-names">
-                  <label>Gauge name like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge_name_like_gauges" name="gauge_name_like"/>
+                  <label id="gauges_gauge_names_like_checkbox">Gauge name like (<input type="checkbox" name="gauge_name_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                  <input class="form-control" list="gauge_name_like_gauges" name="gauge_name_like" id="gauges_gauge_names_like_text"/>
                   <datalist id="gauge_name_like_gauges">
                   </datalist>
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
-                  <label>Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                  <input class="form-control" list="gauge_system_like_gauges" name="gauge_system_like"/>
+                  <label id="gauges_gauge_system_like_checkbox">Gauge system like (<input type="checkbox" name="gauge_system_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                  <input class="form-control" list="gauge_system_like_gauges" name="gauge_system_like" id="gauges_gauge_system_like_text"/>
                   <datalist id="gauge_system_like_gauges">
                   </datalist>
                 </div>
               </div>
               <div class="row query-gauges">
                 <div class="col-xs-3 query-gauge-names">
-                  <label>Gauge names (<input type="checkbox" name="gauge_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                  <select name="gauge_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                  <label id="gauges_gauge_names_in_checkbox">Gauge names (<input type="checkbox" name="gauge_name_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                  <select name="gauge_names" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="gauges_gauge_names_in_text">
                   </select>
                 </div>
                 <div class="col-xs-3 query-gauge-systems">
-                  <label>Gauge systems (<input type="checkbox" name="gauge_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                  <select name="gauge_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                  <label id="gauges_gauge_system_in_checkbox">Gauge systems (<input type="checkbox" name="gauge_system_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                  <select name="gauge_systems" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="gauges_gauge_system_in_text">
                   </select>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-xs-3 query-dim-signatures">
-                <label>DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
-                <input class="form-control" list="dim_signature_like_sources" name="dim_signature_like"/>
+                <label id="gauges_dim_signatures_like_checkbox">DIM signature like (<input type="checkbox" name="dim_signature_notlike_check"><span class="label-text"><b>Not like)</b></span></label>
+                <input class="form-control" list="dim_signature_like_sources" name="dim_signature_like" id="gauges_dim_signatures_like_text"/>
                 <datalist id="dim_signature_like_sources">
                 </datalist>
               </div>
               <div class="col-xs-3 query-dim-signatures">
-                <label>DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1">
+                <label id="gauges_dim_signatures_in_checkbox">DIM signatures (<input type="checkbox" name="dim_signature_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="dim_signatures" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1"  id="gauges_dim_signatures_in_text">
                 </select>
               </div>
             </div>
             <div>
-              <label>
-                <input type="checkbox" name="show_network"><span class="label-text"><b>Show network of gauges</b></span>
+              <label id="gauges_network_button">
+                <input type="checkbox" name="show_network" ><span class="label-text"><b>Show network of gauges</b></span>
               </label>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="gauges_submit_button">Query</button>
             </div>
           </form>
         </div>
@@ -64,4 +64,3 @@
   <!-- /.panel -->
 </div>
 <!-- /.panel -->
-
